Fix spacing of main elements

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -17,7 +17,8 @@
 
 .content{
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
+
     align-items: left;
     flex-direction: row;
 
@@ -29,12 +30,8 @@
 
 /* Main styles */
 main {
-    position: fixed;
 
-    left: 20vw;
-    top: 0vh;
-
-    width: 80vw;
+    width: 100%;
     height: 100vh;
 
     background-color: var(--background-second-color);
