--- a/frontend/src/components/RightSide/RightSide.css
+++ b/frontend/src/components/RightSide/RightSide.css
@@ -1,7 +1,7 @@
 #right-side {
-    position: fixed;
+    /* position: fixed;
     top: 0vh;
-    right: 0vw;
+    right: 0vw; */
 
     height: 100vh;
     width: 10vw;
